// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NaviationDrawers::FloatingDrawer renders correctly when a custom width is set 1`] = `
.c2 {
  text-align: center;
}

.c2[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c2 .md-icon-text {
  font-weight: normal;
}

.c2 .md-icon {
  color: inherit;
}

.c3 {
  font-size: 24px !important;
}

.c0 {
  position: fixed;
  top: 0;
  bottom: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  height: 100%;
  z-index: 1000;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2);
  background-color: #FAFAFA;
  border-left: 1px solid #eeeeee;
  white-space: nowrap;
  width: 100%;
  -webkit-transition: 225ms -webkit-transform;
  -webkit-transition: 225ms transform;
  transition: 225ms transform;
  -webkit-transition-duration: 225ms;
  transition-duration: 225ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
  will-change: transform;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  left: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 56px;
  padding: 6px;
  border-bottom: 1px solid #e0e0e0;
}

.c1 button {
  margin-right: 8px;
}

.c1 span {
  width: 100%;
  text-align: center;
  padding-left: 24px;
  padding-right: 24px;
  color: #212121;
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<aside
  class="c0"
  direction="left"
  open=""
  width="100%"
>
  <ul
    class="MuiList-root-1 MuiList-padding-2 MuiList-subheader-4"
  >
    <header
      class="c1"
      direction="left"
    >
      <button
        class="md-btn md-btn--icon md-pointer--hover md-inline-block c2"
        theme="[object Object]"
        type="button"
      >
        <div
          class="md-ink-container"
        />
        <i
          class="md-icon material-icons md-text--inherit"
        >
          close
        </i>
      </button>
      <span>
        Don't Mock me!
      </span>
    </header>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          JB's Environment
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Such wow
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Sy's Dungeon
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Puts the lotion in the basket...
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 364.7 364.7"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M254.1,345.9l-63.1-159.8L98.6,331.9h-58l129.2-208.6l-14.5-41.2H105V32.9h86.1l98.8,251.4l43.5-14.2l14.5,48.7 L254.1,345.9z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Lambda
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 4c0-1.104-.896-2-2-2h-15c-1.104 0-2 .896-2 2v15c0 1.104.896 2 2 2h15c1.104 0 2-.896 2-2v-15zm-2 14.25c0 .414-.336.75-.75.75h-13.5c-.414 0-.75-.336-.75-.75v-13.5c0-.414.336-.75.75-.75h13.5c.414 0 .75.336.75.75v13.5zm-9 3.75v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm-6-22v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm6 13h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm-22-2h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm11-4h-5v-5h5v5zm6 0h-5v-5h5v5zm-6 6h-5v-5h5v5zm6 0h-5v-5h5v5z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Container
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
  </ul>
  hahaha
</aside>
`;

exports[`NaviationDrawers::FloatingDrawer renders correctly when direction is right and closed 1`] = `
.c2 {
  text-align: center;
}

.c2[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c2 .md-icon-text {
  font-weight: normal;
}

.c2 .md-icon {
  color: inherit;
}

.c3 {
  font-size: 24px !important;
}

.c0 {
  position: fixed;
  top: 0;
  bottom: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  height: 100%;
  z-index: 1000;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2);
  background-color: #FAFAFA;
  border-left: 1px solid #eeeeee;
  white-space: nowrap;
  width: 250px;
  -webkit-transition: 225ms -webkit-transform;
  -webkit-transition: 225ms transform;
  transition: 225ms transform;
  -webkit-transition-duration: 195ms;
  transition-duration: 195ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
  will-change: transform;
  -webkit-transform: translateX(250px);
  -ms-transform: translateX(250px);
  transform: translateX(250px);
  right: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 56px;
  padding: 6px;
  border-bottom: 1px solid #e0e0e0;
}

.c1 button {
  margin-left: 8px;
}

.c1 span {
  width: 100%;
  text-align: left;
  padding-left: 24px;
  padding-right: 24px;
  color: #212121;
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<aside
  class="c0"
  direction="right"
  width="250px"
>
  <ul
    class="MuiList-root-1 MuiList-padding-2 MuiList-subheader-4"
  >
    <header
      class="c1"
      direction="right"
    >
      <button
        class="md-btn md-btn--icon md-pointer--hover md-inline-block c2"
        theme="[object Object]"
        type="button"
      >
        <div
          class="md-ink-container"
        />
        <i
          class="md-icon material-icons md-text--inherit"
        >
          close
        </i>
      </button>
      <span>
        Don't Mock me!
      </span>
    </header>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          JB's Environment
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Such wow
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Sy's Dungeon
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Puts the lotion in the basket...
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 364.7 364.7"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M254.1,345.9l-63.1-159.8L98.6,331.9h-58l129.2-208.6l-14.5-41.2H105V32.9h86.1l98.8,251.4l43.5-14.2l14.5,48.7 L254.1,345.9z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Lambda
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 4c0-1.104-.896-2-2-2h-15c-1.104 0-2 .896-2 2v15c0 1.104.896 2 2 2h15c1.104 0 2-.896 2-2v-15zm-2 14.25c0 .414-.336.75-.75.75h-13.5c-.414 0-.75-.336-.75-.75v-13.5c0-.414.336-.75.75-.75h13.5c.414 0 .75.336.75.75v13.5zm-9 3.75v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm-6-22v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm6 13h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm-22-2h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm11-4h-5v-5h5v5zm6 0h-5v-5h5v5zm-6 6h-5v-5h5v5zm6 0h-5v-5h5v5z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Container
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
  </ul>
  hahaha
</aside>
`;

exports[`NaviationDrawers::FloatingDrawer renders correctly when direction is right and open 1`] = `
.c2 {
  text-align: center;
}

.c2[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c2 .md-icon-text {
  font-weight: normal;
}

.c2 .md-icon {
  color: inherit;
}

.c3 {
  font-size: 24px !important;
}

.c0 {
  position: fixed;
  top: 0;
  bottom: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  height: 100%;
  z-index: 1000;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2);
  background-color: #FAFAFA;
  border-left: 1px solid #eeeeee;
  white-space: nowrap;
  width: 250px;
  -webkit-transition: 225ms -webkit-transform;
  -webkit-transition: 225ms transform;
  transition: 225ms transform;
  -webkit-transition-duration: 225ms;
  transition-duration: 225ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
  will-change: transform;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  right: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 56px;
  padding: 6px;
  border-bottom: 1px solid #e0e0e0;
}

.c1 button {
  margin-left: 8px;
}

.c1 span {
  width: 100%;
  text-align: left;
  padding-left: 24px;
  padding-right: 24px;
  color: #212121;
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<aside
  class="c0"
  direction="right"
  open=""
  width="250px"
>
  <ul
    class="MuiList-root-1 MuiList-padding-2 MuiList-subheader-4"
  >
    <header
      class="c1"
      direction="right"
    >
      <button
        class="md-btn md-btn--icon md-pointer--hover md-inline-block c2"
        theme="[object Object]"
        type="button"
      >
        <div
          class="md-ink-container"
        />
        <i
          class="md-icon material-icons md-text--inherit"
        >
          close
        </i>
      </button>
      <span>
        Don't Mock me!
      </span>
    </header>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          JB's Environment
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Such wow
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Sy's Dungeon
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Puts the lotion in the basket...
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 364.7 364.7"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M254.1,345.9l-63.1-159.8L98.6,331.9h-58l129.2-208.6l-14.5-41.2H105V32.9h86.1l98.8,251.4l43.5-14.2l14.5,48.7 L254.1,345.9z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Lambda
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 4c0-1.104-.896-2-2-2h-15c-1.104 0-2 .896-2 2v15c0 1.104.896 2 2 2h15c1.104 0 2-.896 2-2v-15zm-2 14.25c0 .414-.336.75-.75.75h-13.5c-.414 0-.75-.336-.75-.75v-13.5c0-.414.336-.75.75-.75h13.5c.414 0 .75.336.75.75v13.5zm-9 3.75v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm-6-22v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm6 13h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm-22-2h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm11-4h-5v-5h5v5zm6 0h-5v-5h5v5zm-6 6h-5v-5h5v5zm6 0h-5v-5h5v5z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Container
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
  </ul>
  hahaha
</aside>
`;

exports[`NaviationDrawers::FloatingDrawer renders correctly with basic props and closed 1`] = `
.c2 {
  text-align: center;
}

.c2[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c2 .md-icon-text {
  font-weight: normal;
}

.c2 .md-icon {
  color: inherit;
}

.c3 {
  font-size: 24px !important;
}

.c0 {
  position: fixed;
  top: 0;
  bottom: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  height: 100%;
  z-index: 1000;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2);
  background-color: #FAFAFA;
  border-left: 1px solid #eeeeee;
  white-space: nowrap;
  width: 250px;
  -webkit-transition: 225ms -webkit-transform;
  -webkit-transition: 225ms transform;
  transition: 225ms transform;
  -webkit-transition-duration: 195ms;
  transition-duration: 195ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
  will-change: transform;
  -webkit-transform: translateX(-250px);
  -ms-transform: translateX(-250px);
  transform: translateX(-250px);
  left: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 56px;
  padding: 6px;
  border-bottom: 1px solid #e0e0e0;
}

.c1 button {
  margin-right: 8px;
}

.c1 span {
  width: 100%;
  text-align: center;
  padding-left: 24px;
  padding-right: 24px;
  color: #212121;
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<aside
  class="c0"
  direction="left"
  width="250px"
>
  <ul
    class="MuiList-root-1 MuiList-padding-2 MuiList-subheader-4"
  >
    <header
      class="c1"
      direction="left"
    >
      <button
        class="md-btn md-btn--icon md-pointer--hover md-inline-block c2"
        theme="[object Object]"
        type="button"
      >
        <div
          class="md-ink-container"
        />
        <i
          class="md-icon material-icons md-text--inherit"
        >
          close
        </i>
      </button>
      <span>
        Don't Mock me!
      </span>
    </header>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          JB's Environment
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Such wow
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Sy's Dungeon
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Puts the lotion in the basket...
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 364.7 364.7"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M254.1,345.9l-63.1-159.8L98.6,331.9h-58l129.2-208.6l-14.5-41.2H105V32.9h86.1l98.8,251.4l43.5-14.2l14.5,48.7 L254.1,345.9z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Lambda
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 4c0-1.104-.896-2-2-2h-15c-1.104 0-2 .896-2 2v15c0 1.104.896 2 2 2h15c1.104 0 2-.896 2-2v-15zm-2 14.25c0 .414-.336.75-.75.75h-13.5c-.414 0-.75-.336-.75-.75v-13.5c0-.414.336-.75.75-.75h13.5c.414 0 .75.336.75.75v13.5zm-9 3.75v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm-6-22v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm6 13h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm-22-2h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm11-4h-5v-5h5v5zm6 0h-5v-5h5v5zm-6 6h-5v-5h5v5zm6 0h-5v-5h5v5z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Container
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
  </ul>
  hahaha
</aside>
`;

exports[`NaviationDrawers::FloatingDrawer renders correctly with basic props when open 1`] = `
.c2 {
  text-align: center;
}

.c2[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c2 .md-icon-text {
  font-weight: normal;
}

.c2 .md-icon {
  color: inherit;
}

.c3 {
  font-size: 24px !important;
}

.c0 {
  position: fixed;
  top: 0;
  bottom: 0;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow-y: auto;
  height: 100%;
  z-index: 1000;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2);
  background-color: #FAFAFA;
  border-left: 1px solid #eeeeee;
  white-space: nowrap;
  width: 250px;
  -webkit-transition: 225ms -webkit-transform;
  -webkit-transition: 225ms transform;
  transition: 225ms transform;
  -webkit-transition-duration: 225ms;
  transition-duration: 225ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0;
  transition-delay: 0;
  will-change: transform;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  left: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  height: 56px;
  padding: 6px;
  border-bottom: 1px solid #e0e0e0;
}

.c1 button {
  margin-right: 8px;
}

.c1 span {
  width: 100%;
  text-align: center;
  padding-left: 24px;
  padding-right: 24px;
  color: #212121;
  font-size: 14px;
  font-weight: 500;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<aside
  class="c0"
  direction="left"
  open=""
  width="250px"
>
  <ul
    class="MuiList-root-1 MuiList-padding-2 MuiList-subheader-4"
  >
    <header
      class="c1"
      direction="left"
    >
      <button
        class="md-btn md-btn--icon md-pointer--hover md-inline-block c2"
        theme="[object Object]"
        type="button"
      >
        <div
          class="md-ink-container"
        />
        <i
          class="md-icon material-icons md-text--inherit"
        >
          close
        </i>
      </button>
      <span>
        Don't Mock me!
      </span>
    </header>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          JB's Environment
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Such wow
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-divider-12 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <i
          class="md-icon material-icons c3"
          size="24"
        >
          subscriptions
        </i>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Sy's Dungeon
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          Puts the lotion in the basket...
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 364.7 364.7"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M254.1,345.9l-63.1-159.8L98.6,331.9h-58l129.2-208.6l-14.5-41.2H105V32.9h86.1l98.8,251.4l43.5-14.2l14.5,48.7 L254.1,345.9z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Lambda
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
    <div
      class="MuiButtonBase-root-17 MuiListItem-root-5 MuiListItem-default-8 MuiListItem-gutters-13 MuiListItem-button-14"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAvatar-root-20 MuiAvatar-colorDefault-21"
      >
        <svg
          class="md-icon"
          focusable="false"
          role="img"
          style="height: 24px; width: 24px;"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 4c0-1.104-.896-2-2-2h-15c-1.104 0-2 .896-2 2v15c0 1.104.896 2 2 2h15c1.104 0 2-.896 2-2v-15zm-2 14.25c0 .414-.336.75-.75.75h-13.5c-.414 0-.75-.336-.75-.75v-13.5c0-.414.336-.75.75-.75h13.5c.414 0 .75.336.75.75v13.5zm-9 3.75v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm-6-22v1h-1v-1h1zm2 0v1h-1v-1h1zm-4 0v1h-1v-1h1zm6 0v1h-1v-1h1zm2 0v1h-1v-1h1zm6 13h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm-22-2h1v1h-1v-1zm0-4h1v1h-1v-1zm0-2h1v1h-1v-1zm0 4h1v1h-1v-1zm0 4h1v1h-1v-1zm11-4h-5v-5h5v5zm6 0h-5v-5h5v5zm-6 6h-5v-5h5v5zm6 0h-5v-5h5v5z"
          />
        </svg>
      </div>
      <div
        class="MuiListItemText-root-23"
      >
        <span
          class="MuiTypography-root-29 MuiTypography-subheading-36 MuiListItemText-primary-26"
        >
          Hello Container
        </span>
        <p
          class="MuiTypography-root-29 MuiTypography-body1-38 MuiTypography-colorTextSecondary-62 MuiListItemText-secondary-27"
        >
          some descriptions
        </p>
      </div>
      <span
        class="MuiTouchRipple-root-65"
      />
    </div>
  </ul>
  hahaha
</aside>
`;

exports[`NaviationDrawers::PersistentDrawer renders correctly with basic props and closed 1`] = `
.c0 {
  background-color: #394F7F;
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 11;
  height: 100%;
  width: 64px;
  white-space: nowrap;
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 195ms;
  transition-duration: 195ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  will-change: transition;
}

<nav
  class="c0"
  width="200px"
>
  hahaha
</nav>
`;

exports[`NaviationDrawers::PersistentDrawer renders correctly with basic props and open 1`] = `
.c0 {
  background-color: #394F7F;
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 11;
  height: 100%;
  width: 200px;
  white-space: nowrap;
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 225ms;
  transition-duration: 225ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  will-change: transition;
}

<nav
  class="c0"
  open=""
  width="200px"
>
  hahaha
</nav>
`;

exports[`NaviationDrawers::PersistentDrawer renders correctly with miniWidth 1`] = `
.c0 {
  background-color: #394F7F;
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 11;
  height: 100%;
  width: 200px;
  white-space: nowrap;
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 225ms;
  transition-duration: 225ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  will-change: transition;
}

<nav
  class="c0"
  open=""
  width="200px"
>
  hahaha
</nav>
`;

exports[`NaviationDrawers::PersistentDrawer renders correctly with width 1`] = `
.c0 {
  background-color: #394F7F;
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 11;
  height: 100%;
  width: 100%;
  white-space: nowrap;
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 225ms;
  transition-duration: 225ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  will-change: transition;
}

<nav
  class="c0"
  open=""
  width="100%"
>
  hahaha
</nav>
`;

exports[`NaviationDrawers::PersistentDrawer renders correctly with widthn 1`] = `
.c0 {
  background-color: #394F7F;
  position: relative;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 11;
  height: 100%;
  width: 100%;
  white-space: nowrap;
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-duration: 225ms;
  transition-duration: 225ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,0.2,1);
  transition-timing-function: cubic-bezier(0,0,0.2,1);
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  will-change: transition;
}

<nav
  class="c0"
  open=""
  width="100%"
>
  hahaha
</nav>
`;
